# svg-native-viewer

./: .gitignore  .gitmodules  README.md
.circleci/: config.yml
.github/: CODEOWNERS
svgnative/: CMakeLists.txt  SVGNativeViewerLib.pc.in
svgnative/cmake/: FindSkia.cmake
svgnative/example/testC/: CMakeLists.txt  TestMain.c  TestMain.cpp
svgnative/example/testCairo/: CMakeLists.txt  TestCairo.cpp
svgnative/example/testCocoaCG/: AppDelegate.h  AppDelegate.mm  CMakeLists.txt  Document.h  Document.mm  Document.xib  Info.plist  MainMenu.xib  SVGNSView.h  SVGNSView.mm  main.mm
svgnative/example/testD2D/: CMakeLists.txt  TestD2D.cpp  basewin.h
svgnative/example/testGDIPlus/: CMakeLists.txt  TestGDIPlus.cpp
svgnative/example/testQt/: TestQt.cpp  TestQt.pro  example.pro  mainwindow.cpp  mainwindow.h  qsvgrenderer.pro
svgnative/example/testSkia/: CMakeLists.txt  TestSkia.cpp
svgnative/example/testText/: CMakeLists.txt  TestMain.cpp
svgnative/example/testWindraw/: CMakeLists.txt  TestWindraw.cpp
svgnative/include/: Config.h  SVGDocument.h  SVGNativeCWrapper.h  SVGRenderer.h
svgnative/include/svgnative/: Config.h  Rect.h  SVGDocument.h  SVGRenderer.h
svgnative/include/svgnative/ports/cairo/: CairoImageInfo.h  CairoSVGRenderer.h
svgnative/include/svgnative/ports/cg/: CGSVGRenderer.h
svgnative/include/svgnative/ports/d2d/: D2DSVGRenderer.h
svgnative/include/svgnative/ports/gdiplus/: GDIPlusSVGRenderer.h
svgnative/include/svgnative/ports/qt/: QSVGRenderer.h
svgnative/include/svgnative/ports/skia/: SkiaSVGRenderer.h
svgnative/include/svgnative/ports/string/: StringSVGRenderer.h
svgnative/include/svgnative/xml/: XMLParser.h
svgnative/ports/cairo/: CairoImageInfo.c  CairoSVGRenderer.cpp  CairoSVGRenderer.h
svgnative/ports/cg/: CGSVGRenderer.cpp  CGSVGRenderer.h
svgnative/ports/gdiplus/: GDIPlusSVGRenderer.cpp  GDIPlusSVGRenderer.h
svgnative/ports/skia/: SkiaSVGRenderer.cpp  SkiaSVGRenderer.h
svgnative/ports/string/: StringSVGRenderer.cpp  StringSVGRenderer.h
svgnative/ports/windraw/: WindrawSVGRenderer.cpp  WindrawSVGRenderer.h
svgnative/script/: runTest.py
svgnative/src/: CSSColorKeywords.h  Constants.h  DeprecatedSVGDocumentImpl.cpp  Interval.cpp  Interval.h  Rect.cpp  SVGDocument.cpp  SVGDocumentImpl.cpp  SVGDocumentImpl.h  SVGNativeCWrapper.cpp  SVGParserArcToCurve.cpp  SVGRenderer.cpp  SVGStringParser.cpp  SVGStringParser.h
svgnative/src/ports/cairo/: CairoSVGRenderer.cpp
svgnative/src/ports/cg/: CGSVGRenderer.cpp
svgnative/src/ports/d2d/: D2DSVGRenderer.cpp
svgnative/src/ports/gdiplus/: GDIPlusSVGRenderer.cpp
svgnative/src/ports/qt/: QSVGRenderer.cpp  QXMLParser.cpp  qsvgrenderer.pro
svgnative/src/ports/skia/: SkiaSVGRenderer.cpp
svgnative/src/ports/string/: StringSVGRenderer.cpp
svgnative/src/win/: version.rc
svgnative/src/xml/: ExpatXMLParser.cpp  LibXMLParser.cpp  MSXMLParser.cpp  RapidXMLParser.cpp  XMLParser.h
svgnative/test/: clipping.txt  dash-array.txt  elem-currentColor.txt  elem-defs.txt  elem-transform-on-parent.txt  gradient-outside-defs.txt  gradient.txt  image.txt  paint.txt  path.txt  properties.txt  recursion.txt  shapes.txt  svgLength.txt  symboles.txt  transform.txt  use.txt
svgnative/tests/: CMakeLists.txt  bounds-tests.cpp  interval-tests.cpp  parsing-tests.cpp  rectangle-tests.cpp  simple-test.cpp  svg-bounds.txt  svg-filenames.txt
svgnative/tests/librsvg-bounds-generator/: Makefile  script.cpp
